--- a/DjangoBlog/blog/templates/index.html
+++ b/DjangoBlog/blog/templates/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>主页</title>
 </head>
-<body>
-<h1>{{article.title}}</h1>
-<h3>{{article.content}}</h3>
+<h1>
+    <a href="edit/0">新文章</a>
+</h1>
+{% for article in articles %}
+    <a href="article/{{article.id}}">{{article.title}}</a>
+    <br/>
+{% endfor %}
 </body>
 </html>
